logs/dhcp-relay.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/ipaddr-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydhcplib'...
Compiling './lib/python3.5/site-packages/pydhcplib/dhcp_network.py'...
***   File "./lib/python3.5/site-packages/pydhcplib/dhcp_network.py", line 38
    except socket.error, msg :
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydhcplib/dhcp_packet.py'...
***   File "./lib/python3.5/site-packages/pydhcplib/dhcp_packet.py", line 146
    except ValueError,TypeError :
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydhcplib/type_hwmac.py'...
***   File "./lib/python3.5/site-packages/pydhcplib/type_hwmac.py", line 36
    else : raise TypeError , 'hwmac init : Valid types are str and list'
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydhcplib/type_ipv4.py'...
***   File "./lib/python3.5/site-packages/pydhcplib/type_ipv4.py", line 24
    if not self.CheckString(value) : raise ValueError, "ipv4 string argument is not an valid ip "
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydhcplib/type_strlist.py'...
***   File "./lib/python3.5/site-packages/pydhcplib/type_strlist.py", line 31
    else : raise TypeError , 'strlist init : Valid types are str and  list of int'
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pydhcplib-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/timeout_decorator'...
Listing './lib/python3.5/site-packages/timeout_decorator-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/fr'...
Listing './share/man/fr/man3'...
Listing './share/man/man3'...
Listing './share/man/man8'...
Listing './share/python-wheels'...
